# corc

./: .gitignore  CLAUDE.md  OPERATOR.md  PLAN.md  SPEC.md  conftest.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: format-python.sh
.corc/: blacklist.md  config.yaml  last_backup  last_rotation  planning_lessons.md  repos.yaml
.corc/drafts/: PLAN-OVERVIEW.md  group1-data-integrity.md  group2-enforcement.md  group3-tui-overhaul.md  group4-multi-repo-config.md  group5-cleanup.md  plan-cross-repo-dispatch.md  plan-fdp-replace-commissions-expense.md  plan-repo-migration-policy.md  session-20260323-160843.json  session-20260323-173652.json  session-20260324-004321.json
.corc/roles/: implementer.yaml  (+1 more)
data/: mutations.jsonl
tests/: test_adaptive_retry.py  test_analyze.py  test_backup.py  test_blacklist.py  test_catch_up.py  test_chaos.py  test_chunking.py  test_cli_complete.py  test_code_reload.py  test_commissions_refs_v2.py  test_config.py  test_context.py  test_context_staleness.py  test_cross_repo_dispatch.py  test_curate.py  test_daemon.py  test_daemon_agent_recovery.py  test_dag.py  test_deprioritize.py  test_dispatch.py  test_draft.py  test_e2e_verify.py  test_executor.py  test_format_hook.py  test_hook_gen.py  test_hybrid_search.py  test_index_freshness.py  test_knowledge.py  test_lint_done_when.py  test_mutations.py  test_notifications.py  test_optimistic_merge.py  test_patterns.py  test_pause.py  test_plan.py  test_planning_feedback.py  test_planning_ui_design.py  test_pr.py  test_pr_creation_ordering.py  test_pr_workflow.py  (+23 more)
(+61 files in other folders)
